# mps-info

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: resources.rc.in  version.h.in  version.rc.in
src/: main.c
